force-app/main/default/objects/Case/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <label>Cancelled By</label>
    <type>Text</type>
    <length>120</length>
    <description>Name of the person requesting the cancellation, captured on the My Requests row action before a Cancellation Request Case is created. Copied onto the related Staffing_Request__c's own Cancelled_By__c field by SupportRequestService.flagCancellationRequested.</description>
</CustomField>