force-app/main/default/objects/Case/fields/Portal_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Request_Type__c</fullName>
    <label>Portal Request Type</label>
    <type>Picklist</type>
    <description>Distinguishes portal-submitted Cases raised via the Support/Query screen from other Case sources.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Query</fullName>
                <default>true</default>
                <label>General Query</label>
            </value>
            <value>
                <fullName>Cancellation Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>