force-app/main/default/objects/Case/fields/Related_Staffing_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Staffing_Request__c</fullName>
    <label>Related Staffing Request</label>
    <type>Lookup</type>
    <referenceTo>Staffing_Request__c</referenceTo>
    <relationshipName>Support_Cases</relationshipName>
    <relationshipLabel>Support Cases</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link when a portal query or cancellation request relates to a specific staffing request.</description>
</CustomField>